upgrade mapbox-gl to fix chrome flicker issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -49,7 +49,7 @@ html, body, #content, #app {
   background-color: #FC574B;
   position: absolute;
   left: 10px;
-  bottom: 10px;
+  bottom: 35px;
 }
 
 
